reference test